@@ -3,6 +3,7 @@
 * New method: all (Output all available information)
 * Rename platform to ruby_platform
 * Rename environment to env
+* Add script_lines (SCRIPT_LINES__)
 * Add encoding_list and encoding_aliases (Encoding.name_list and Encoding.aliases)
 * Add gc (GC.stat)
 * Add user_home (Dir.home)
